Fix: Typo in library load.

--- a/dist-trial/app.html
+++ b/dist-trial/app.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet" type="text/css">
 
-    <script src="./libs/nexusUI.js" type="text/javascript"></script>
+    <script src="./libs/NexusUI.js" type="text/javascript"></script>
     <script src="./libs/maximilian.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/webmidi@2.0.0" type="text/javascript"></script>
     <link rel="stylesheet" href="./styleCSS.css" type="text/css">
