--- a/dist-trial/app.html
+++ b/dist-trial/app.html
@@ -25,8 +25,8 @@
                 <!-- Logo -->
 
             <div id="logo">
-                <h1>R-VAE</h1>
-                <p id="subtitle">Rhythmic explorations <br>of latent spaces</p>
+                <h1>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h1>
+                <p id="subtitle">&nbsp; &nbsp; <br>&nbsp; &nbsp;</p>
             </div>
 
 
