Add: Embed R-VAE in instructions.
Still not working on Chrome. It needs a user action.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet"> 
 
     <link rel="stylesheet" href="./styleCSS.css" type="text/css">
+    <link rel="stylesheet" href="./extrastyle.css" type="text/css">
 </head>
 
 <body>
@@ -43,10 +44,12 @@
             <li>Rhythmic trajectories can be cleared by pressing C</li>
         </ul>
     
-
-
-
         <h1 id="goButton"><a href="./dist-trial/app.html">GO!</a></h1>
+
+        <div id="wrap">
+            <iframe id="scaled-frame" src="https://vigliensoni.github.io/R-VAE-user-study/dist-trial/app.html" ></iframe>								
+        </div>
+
         <h1 id="goButton"><a href="./dist-1a/app.html">GO!</a></h1>
 
     </div>
